typescript/checker/tests/conformance/es6/yieldExpressions/YieldExpression18_es6.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/conformance/es6/yieldExpressions/YieldExpression18_es6.ts:3:1
  |
3 | yield(foo);
  | ^^^^^

error: UndefinedSymbol {
    sym: Atom('yield' type=static),
    span: Span {
        lo: BytePos(
            30,
        ),
        hi: BytePos(
            35,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/YieldExpression18_es6.ts:3:1
  |
3 | yield(foo);
  | ^^^^^

error: UndefinedSymbol {
    sym: Atom('foo' type=inline),
    span: Span {
        lo: BytePos(
            36,
        ),
        hi: BytePos(
            39,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/YieldExpression18_es6.ts:3:7
  |
3 | yield(foo);
  |       ^^^

